[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "femap-linting"
version = "0.1.0"
description = "Femap Python API stubs and constants"
requires-python = ">=3.8"
dependencies = [
    "pywin32",
]

[tool.setuptools]
py-modules = ["Pyfemap", "femap_constants", "femap_path_utils"]
